--- a/project/index.html
+++ b/project/index.html
@@ -1,57 +1,122 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio - Accueil</title>
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/accueil.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
-<span class ="Header">
+<body>
+    <input type="checkbox" id="theme-toggle" aria-label="checkbox dark mode" hidden>
+
+    <!-- Header -->
     <header>
-        <button id="menu-button" popovertarget="menu" popovertargetaction="sho"><img src="images/menu.webp" width="20"></img></button>
-        <nav popover id="menu">
-            <a href ="pages/pages 2.html"> <p>Page 2</p></a>
-            <a href ="pages/pages 3.html"> <p>Page 3</p></a>
-            <a href ="pages/pages 4.html"> <p>Page 4</p></a>
+        <h1 class="logo">Portfolio</h1>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="pages/pages_2.html">Projets</a>
+            <a href="pages/pages_3.html">À Propos</a>
         </nav>
-        <button id="login-button" popovertarget="connection" popovertargetaction="show"><img src="images/login.jpg" width="20" align="right"></img></button>
-        <form popover id="connection" action="" method="get" class="login-form">
-            <div class="login-form">
-                <label for="identifiant">Entrez votre Identifiant: </label>
-                <input type="text" name="identifiant" id="identifiant" required />
-            </div>
-            <div class="login-form">
-                <label for="mot-de-passe">Entrez votre mot de passe: </label>
-                <input type="text" name="mdp" id="mdp" required />
-            </div>
-            <div class="login-form">
-                <input type="submit" value="Valider" />
-            </div>
-        </form>
-        <h1 id="titre accueil">Page 1</h1>
+
+        <section class="header-right">
+            <a href="#contact" class="bouton-contact">Me Contacter</a>
+
+            <label for="theme-toggle" class="theme-icon">
+                <i class="fas fa-sun"></i>
+                <i class="fas fa-moon"></i>
+            </label>
+        </section>
     </header>
-</span>
-
- <body id="Page1">
-   
-    <div class="Paragraphe1">
-        <p align="justify">Integer et aliquet risus, aliquet varius leo. Suspendisse semper, magna in egestas feugiat, justo nibh ornare tortor, in convallis est augue a lacus. Proin eget magna sodales, accumsan justo quis, hendrerit nisl. Nulla eros arcu, commodo non euismod eget, venenatis rutrum ligula. Sed sit amet pellentesque nisl. Morbi vestibulum justo sed purus vulputate volutpat. Vestibulum sed eros ac ligula tincidunt tempus. Vestibulum at iaculis tellus. Vestibulum ut nunc et libero lacinia viverra. Phasellus sem justo, auctor sed condimentum fringilla, bibendum quis arcu. Aliquam vel viverra tortor, non posuere neque. Curabitur in pulvinar lectus, id tempus risus. Sed rhoncus ullamcorper egestas. Nunc blandit ante turpis, ut consequat lacus cursus eu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam eu sem id est accumsan bibendum eget id est.      </p>
-    </div>
 
 
-    <div class="Paragraphe2">
-        <p>Cras ac turpis tincidunt, convallis odio nec, vehicula velit. Sed sed quam eget odio bibendum suscipit at eget urna. Aenean scelerisque tincidunt neque, et dictum libero pharetra quis. Cras sollicitudin accumsan nunc, vitae vestibulum odio rutrum vitae. Vestibulum at molestie sem. Maecenas a neque vel eros vehicula efficitur. Maecenas maximus lacinia orci, at fringilla tortor suscipit at. Quisque vel bibendum leo. Morbi semper dui vel fermentum varius. Aliquam scelerisque rhoncus accumsan. Praesent justo erat, ultrices id blandit eu, suscipit vitae neque. Donec viverra massa ipsum. Nulla ultrices leo sit amet efficitur placerat. Quisque vestibulum massa eu massa dignissim, lacinia eleifend nisl iaculis.</p>
-    </div>
+
+    <main>
+
+    <!-- Section Présentation -->
+    <section class="presentation">
+        <article>
+            <h2>Découvrez mon Portfolio Informatique</h2>
+            <p>
+                Ce portfolio a été conçu dans un but purement personnel et n'est censé être lu par aucune personne autre que mon entourage et les experts chargés de juger objectivement les pages qui composent ce travail durement achevé. <br>
+                Ce portfolio est avant tout une expérience menée pour des recherches avancées en sciences informatiques plus connue sous le nom de “TechnoWeb”, ainsi qu'à but purement professionnel et commercial. 
+                Oui j'ai changé d'avis entre le début et la fin de ce long paragraphe et alors ? <br>
+                Selon Philippe Geluck, “Il n'y a que les imbéciles qui ne changent pas d'avis”.
+            </p>
+
+            <nav>
+                <a href="pages/pages_2.html" class="bouton-projet">Voir mes projets</a>
+                <a href="pages/pages_3.html" class="bouton-propos">En savoir plus sur moi</a>
+            </nav>
+        </article>
+
+        <aside>
+            <h2 class="static-color">Compositions du Portfolio</h2>
+                <ul class="grid-accueil">
+                    <li class="card">Mes Projets</li>
+                    <li class="card">À Propos de moi</li>
+                    <li class="card">Mes compétences Informatique <br> (mais pas que)</li>
+                    <li class="card">Beaucoup de mots</li>
+                </ul>
+        </aside>
+    </section>
+
+    <!-- Section Contact -->
+    <section id="contact">
+        <h2>Contactez-moi pour discuter de vos projets informatiques</h2>
+        <p>
+            Si vous êtes intéressé par mon savoir-faire, par ma capacité à retenir votre attention, ou même si vous avez eu un petit rictus amusé en lisant mon projet, <br> alors n'hésitez pas à me contacter afin que nous puissions discuter de l'avenir et de nos futures collaborations, je l'espère.
+        </p>
+
+        <form>
+            <label class="static-color">Prénom*</label>
+            <input type="text" required>
+
+            <label class="static-color">Nom*</label>
+            <input type="text" required>
+
+            <label class="static-color">E-mail*</label>
+            <input type="email" required>
+
+            <button type="submit">Soumettre</button>
+        </form>
+    </section>
+
+    </main>
 
 
-    <div class="Paragraphe3">
-        <p>Morbi quis libero venenatis, commodo est sed, efficitur tortor. Phasellus eget lacus at metus imperdiet efficitur vitae vel enim. Aenean luctus condimentum iaculis. Proin sodales euismod quam ut fringilla. Nullam in quam eros. Pellentesque volutpat dapibus augue sagittis porta. Nullam eu lacus sit amet odio facilisis scelerisque eu et nibh. Etiam quis auctor tortor. Praesent pellentesque fringilla nunc in lobortis.</p>
-    </div>
 
+    <!-- Footer -->
+    <footer>
+    <nav class="footer-links">
+        <a href="index.html">Accueil</a>
+        <a href="pages/pages_2.html">Projets</a>
+        <a href="pages/pages_3.html">À Propos</a>
+    </nav>
+    
 
-    <div class="Paragraphe4">
-        <p>Nunc elementum vestibulum nibh ut mollis. Donec eget feugiat nunc. Sed facilisis nulla vitae nisi vehicula, a mattis magna vestibulum. Quisque augue augue, eleifend vitae aliquet ut, tempus non tellus. Nulla ac justo nec mi porttitor pharetra. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus id nunc in neque gravida malesuada. Phasellus sed rhoncus quam. Ut ut odio ante. Suspendisse a hendrerit orci, eu interdum velit. Aenean rhoncus massa id odio volutpat pulvinar. Etiam efficitur gravida nunc, vitae rhoncus arcu sagittis luctus. Phasellus quis eros feugiat, ullamcorper tortor sit amet, semper nisi. Nullam et egestas nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-    </div>
+    <!-- Réseaux Sociaux -->
+    <section class="socials">
+        <a href="mailto:tonmailpro@domaine.com" aria-label="Envoyer un Mail">
+            <i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/AL-201" target="_blank" aria-label="Compte Github">
+            <i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com" target="_blank" aria-label="Page Linkedin">
+            <i class="fab fa-linkedin-in"></i></a>
+        <a href="https://instagram.com" target="_blank" aria-label="Page Instagram">
+            <i class="fab fa-instagram"></i></a>
+    </section>
+
+    <p class="credits">Privacy Policy · Legal · © 2025 Portfolio. All rights reserved.</p>
+    </footer>
+
 </body>
-
 </html>
