--- a/project/index.html
+++ b/project/index.html
@@ -1,122 +1,160 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Accueil</title>
-    <link rel="stylesheet" href="css/variables.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="css/variables.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/accueil.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+  </head>
 
-<body>
-    <input type="checkbox" id="theme-toggle" aria-label="checkbox dark mode" hidden>
+  <body>
+    <input
+      type="checkbox"
+      id="theme-toggle"
+      aria-label="checkbox dark mode"
+      hidden
+    />
 
     <!-- Header -->
     <header>
-        <h1 class="logo">Portfolio</h1>
-        <nav>
-            <a href="index.html">Accueil</a>
-            <a href="pages/pages_2.html">Projets</a>
-            <a href="pages/pages_3.html">À Propos</a>
-        </nav>
-
-        <section class="header-right">
-            <a href="#contact" class="bouton-contact">Me Contacter</a>
-
-            <label for="theme-toggle" class="theme-icon">
-                <i class="fas fa-sun"></i>
-                <i class="fas fa-moon"></i>
-            </label>
-        </section>
-    </header>
-
-
-
-    <main>
-
-    <!-- Section Présentation -->
-    <section class="presentation">
-        <article>
-            <h2>Découvrez mon Portfolio Informatique</h2>
-            <p>
-                Ce portfolio a été conçu dans un but purement personnel et n'est censé être lu par aucune personne autre que mon entourage et les experts chargés de juger objectivement les pages qui composent ce travail durement achevé. <br>
-                Ce portfolio est avant tout une expérience menée pour des recherches avancées en sciences informatiques plus connue sous le nom de “TechnoWeb”, ainsi qu'à but purement professionnel et commercial. 
-                Oui j'ai changé d'avis entre le début et la fin de ce long paragraphe et alors ? <br>
-                Selon Philippe Geluck, “Il n'y a que les imbéciles qui ne changent pas d'avis”.
-            </p>
-
-            <nav>
-                <a href="pages/pages_2.html" class="bouton-projet">Voir mes projets</a>
-                <a href="pages/pages_3.html" class="bouton-propos">En savoir plus sur moi</a>
-            </nav>
-        </article>
-
-        <aside>
-            <h2 class="static-color">Compositions du Portfolio</h2>
-                <ul class="grid-accueil">
-                    <li class="card">Mes Projets</li>
-                    <li class="card">À Propos de moi</li>
-                    <li class="card">Mes compétences Informatique <br> (mais pas que)</li>
-                    <li class="card">Beaucoup de mots</li>
-                </ul>
-        </aside>
-    </section>
-
-    <!-- Section Contact -->
-    <section id="contact">
-        <h2>Contactez-moi pour discuter de vos projets informatiques</h2>
-        <p>
-            Si vous êtes intéressé par mon savoir-faire, par ma capacité à retenir votre attention, ou même si vous avez eu un petit rictus amusé en lisant mon projet, <br> alors n'hésitez pas à me contacter afin que nous puissions discuter de l'avenir et de nos futures collaborations, je l'espère.
-        </p>
-
-        <form>
-            <label class="static-color">Prénom*</label>
-            <input type="text" required>
-
-            <label class="static-color">Nom*</label>
-            <input type="text" required>
-
-            <label class="static-color">E-mail*</label>
-            <input type="email" required>
-
-            <button type="submit">Soumettre</button>
-        </form>
-    </section>
-
-    </main>
-
-
-
-    <!-- Footer -->
-    <footer>
-    <nav class="footer-links">
+      <h1 class="logo">Portfolio</h1>
+      <nav>
         <a href="index.html">Accueil</a>
         <a href="pages/pages_2.html">Projets</a>
         <a href="pages/pages_3.html">À Propos</a>
-    </nav>
-    
+      </nav>
 
-    <!-- Réseaux Sociaux -->
-    <section class="socials">
+      <section class="header-right">
+        <a href="#contact" class="bouton-contact">Me Contacter</a>
+
+        <label for="theme-toggle" class="theme-icon">
+          <i class="fas fa-sun"></i>
+          <i class="fas fa-moon"></i>
+        </label>
+      </section>
+    </header>
+
+    <main>
+      <!-- Section Présentation -->
+      <section class="presentation">
+        <article>
+          <h2>Découvrez mon Portfolio Informatique</h2>
+          <p>
+            Ce portfolio a été conçu dans un but purement personnel et n'est
+            censé être lu par aucune personne autre que mon entourage et les
+            experts chargés de juger objectivement les pages qui composent ce
+            travail durement achevé. <br />
+            Ce portfolio est avant tout une expérience menée pour des recherches
+            avancées en sciences informatiques plus connue sous le nom de
+            “TechnoWeb”, ainsi qu'à but purement professionnel et commercial.
+            Oui j'ai changé d'avis entre le début et la fin de ce long
+            paragraphe et alors ? <br />
+            Selon Philippe Geluck, “Il n'y a que les imbéciles qui ne changent
+            pas d'avis”.
+          </p>
+
+          <nav>
+            <a href="pages/pages_2.html" class="bouton-projet"
+              >Voir mes projets</a
+            >
+            <a href="pages/pages_3.html" class="bouton-propos"
+              >En savoir plus sur moi</a
+            >
+          </nav>
+        </article>
+
+        <aside>
+          <h2 class="static-color">Compositions du Portfolio</h2>
+          <ul class="grid-accueil">
+            <li class="card">Mes Projets</li>
+            <li class="card">À Propos de moi</li>
+            <li class="card">
+              Mes compétences Informatique <br />
+              (mais pas que)
+            </li>
+            <li class="card">Beaucoup de mots</li>
+          </ul>
+        </aside>
+      </section>
+
+      <!-- Section Contact -->
+      <section id="contact">
+        <h2>Contactez-moi pour discuter de vos projets informatiques</h2>
+        <p>
+          Si vous êtes intéressé par mon savoir-faire, par ma capacité à retenir
+          votre attention, ou même si vous avez eu un petit rictus amusé en
+          lisant mon projet, <br />
+          alors n'hésitez pas à me contacter afin que nous puissions discuter de
+          l'avenir et de nos futures collaborations, je l'espère.
+        </p>
+
+        <form>
+          <label class="static-color">Prénom*</label>
+          <input type="text" required />
+
+          <label class="static-color">Nom*</label>
+          <input type="text" required />
+
+          <label class="static-color">E-mail*</label>
+          <input type="email" required />
+
+          <button type="submit">Soumettre</button>
+        </form>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <nav class="footer-links">
+        <a href="index.html">Accueil</a>
+        <a href="pages/pages_2.html">Projets</a>
+        <a href="pages/pages_3.html">À Propos</a>
+      </nav>
+
+      <!-- Réseaux Sociaux -->
+      <section class="socials">
         <a href="mailto:tonmailpro@domaine.com" aria-label="Envoyer un Mail">
-            <i class="fas fa-envelope"></i></a>
-        <a href="https://github.com/AL-201" target="_blank" aria-label="Compte Github">
-            <i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com" target="_blank" aria-label="Page Linkedin">
-            <i class="fab fa-linkedin-in"></i></a>
-        <a href="https://instagram.com" target="_blank" aria-label="Page Instagram">
-            <i class="fab fa-instagram"></i></a>
-    </section>
+          <i class="fas fa-envelope"></i
+        ></a>
+        <a
+          href="https://github.com/AL-201"
+          target="_blank"
+          aria-label="Compte Github"
+        >
+          <i class="fab fa-github"></i
+        ></a>
+        <a
+          href="https://linkedin.com"
+          target="_blank"
+          aria-label="Page Linkedin"
+        >
+          <i class="fab fa-linkedin-in"></i
+        ></a>
+        <a
+          href="https://instagram.com"
+          target="_blank"
+          aria-label="Page Instagram"
+        >
+          <i class="fab fa-instagram"></i
+        ></a>
+      </section>
 
-    <p class="credits">Privacy Policy · Legal · © 2025 Portfolio. All rights reserved.</p>
+      <p class="credits">
+        Privacy Policy · Legal · © 2025 Portfolio. All rights reserved.
+      </p>
     </footer>
-
-</body>
+  </body>
 </html>
