--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <!-- Réseaux Sociaux -->
       <section class="socials">
-        <a href="mailto:tonmailpro@domaine.com" aria-label="Envoyer un Mail">
+        <a href="mailto:alexiel.landrie@gmail.com" aria-label="Envoyer un Mail">
           <i class="fas fa-envelope"></i
         ></a>
         <a
@@ -158,3 +158,4 @@
     </footer>
   </body>
 </html>
+
