--- a/pages/pages_2.html
+++ b/pages/pages_2.html
@@ -300,7 +300,7 @@ if __name__ == "__main__":
 
       <!-- Réseaux Sociaux -->
       <section class="socials">
-        <a href="mailto:tonmailpro@domaine.com" aria-label="Envoyer un Mail">
+        <a href="mailto:alexiel.landrie@gmail.com" aria-label="Envoyer un Mail">
           <i class="fas fa-envelope"></i
         ></a>
         <a
@@ -332,3 +332,4 @@ if __name__ == "__main__":
     </footer>
   </body>
 </html>
+
