--- a/pages/pages_3.html
+++ b/pages/pages_3.html
@@ -142,7 +142,7 @@
 
       <!-- Réseaux Sociaux -->
       <section class="socials">
-        <a href="mailto:tonmailpro@domaine.com" aria-label="Envoyer un Mail">
+        <a href="mailto:alexiel.landrie@gmail.com" aria-label="Envoyer un Mail">
           <i class="fas fa-envelope"></i
         ></a>
         <a
@@ -174,3 +174,4 @@
     </footer>
   </body>
 </html>
+
