--- a/pages/Projets/Discord_Bot.html
+++ b/pages/Projets/Discord_Bot.html
@@ -426,7 +426,7 @@ async def setup(bot):
 
       <!-- Réseaux Sociaux -->
       <section class="socials">
-        <a href="mailto:tonmailpro@domaine.com" aria-label="Envoyer un Mail">
+        <a href="mailto:alexiel.landrie@gmail.com" aria-label="Envoyer un Mail">
           <i class="fas fa-envelope"></i
         ></a>
         <a
