--- a/pages/pages_3.html
+++ b/pages/pages_3.html
@@ -58,7 +58,7 @@
 
         <article>
           <p>
-            Née à Calais, j'ai fait mes premiers pas en dehors de la maternelle
+            Né à Calais, j'ai fait mes premiers pas en dehors de la maternelle
             à l'école St-Agnès. J'ai ensuite, malheureusement, dû déménager de
             cette magnifique ville qu'est Calais pour aller dans le sud, là où
             la chaleur fait fondre nos atomes si vite, à 15min de Marseille,
@@ -69,22 +69,22 @@
             pas très réputé. <br /><br />
             C'est là-bas, au lycée, que j'ai commencé à m'intéresser à
             l'informatique, les études d'info au collège étaient si triviales
-            que ça me laissait plus qu'autre chose, mais au lycée ça a vraiment
+            que ça me lassait plus qu'autre chose, mais au lycée ça a vraiment
             changé. Je me suis intéressé à la programmation, aux bases de
             données, aux réseaux, c'était la première matière où je me suis
             vraiment mis à travailler chez moi pendant plusieurs heures sans
             voir passer le temps et où je m'amusais vraiment. <br /><br />
             Ayant des facilités et des parents qui attendaient beaucoup de moi,
-            je me suis mis en quête d'aller dans une prépa intégré pour obtenir
+            je me suis mis en quête d'aller dans une prépa intégrée pour obtenir
             un diplôme d'ingénieur. Mais sans surprise, j'étais pas de niveau…
             Alors, pas de niveau, tout est relatif, en réalité, j'étais
-            extrêmement surpris des matières abordés dans ma prépa intégré, 60%
-            des matières étaient composés de Physique et de Chimie, pour 35% de
-            Math et enfin 5% d'informatique. Alors si j'ai raté ma première
+            extrêmement surpris des matières abordées dans ma prépa intégrée, 60%
+            des matières étaient composées de Physique et de Chimie, pour 35% de
+            Mathématique et enfin 5% d'Informatique. Alors si j'ai raté ma première
             année d'intégration à cette prépa, c'est surtout parce que je hais
             la Physique-Chimie et que cette année était essentiellement composée
             de ces matières de l'enfer. Parce que oui, la seule matière
-            d'informatique que j'ai eu, je l'ai passé les doigts dans le nez
+            d'informatique que j'ai eu, je l'ai passée les doigts dans le nez
             avec 19 aux examens, mais la raison à ça c'est que l'informatique
             qu'on y a fait était vraiment bidon.. À titre d'exemple, on a appris
             à se servir de Excel, puis on a appris à faire des requêtes basiques
@@ -92,7 +92,7 @@
             Après cet échec, qui n'en était pas vraiment un, j'appellerais
             plutôt ça une erreur de parcours, j'ai décidé de partir en Licence
             Informatique, Licence dans laquelle j'étais certain d'y trouver de
-            l'informatique à sa juste valeur et de pouvoir le travailler
+            l'informatique à sa juste valeur et de pouvoir la travailler
             réellement. Alors me voici.
           </p>
           <br />
@@ -174,4 +174,5 @@
     </footer>
   </body>
 </html>
+
 
