--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
         </p>
 
         <form>
-          <label class="static-color">Prénom*</label>
+          <label>Prénom*</label>
           <input type="text" required />
 
-          <label class="static-color">Nom*</label>
+          <label>Nom*</label>
           <input type="text" required />
 
-          <label class="static-color">E-mail*</label>
+          <label>E-mail*</label>
           <input type="email" required />
 
           <button type="submit">Soumettre</button>
@@ -158,4 +158,5 @@
     </footer>
   </body>
 </html>
+
 
