--- a/pages/Projets/Azul.html
+++ b/pages/Projets/Azul.html
@@ -32,7 +32,7 @@
     <header>
       <h1 class="logo">Portfolio</h1>
       <nav>
-        <a href=".././index.html">Accueil</a>
+        <a href="../../index.html">Accueil</a>
         <a href="../pages_2.html">Projets</a>
         <a href="../pages_3.html">À Propos</a>
       </nav>
