--- a/index.html
+++ b/index.html
@@ -53,17 +53,8 @@
         <article>
           <h2>Découvrez mon Portfolio Informatique</h2>
           <p>
-            Ce portfolio a été conçu dans un but purement personnel et n'est
-            censé être lu par aucune personne autre que mon entourage et les
-            experts chargés de juger objectivement les pages qui composent ce
-            travail durement achevé. <br />
-            Ce portfolio est avant tout une expérience menée pour des recherches
-            avancées en sciences informatiques plus connue sous le nom de
-            “TechnoWeb”, ainsi qu'à but purement professionnel et commercial.
-            Oui j'ai changé d'avis entre le début et la fin de ce long
-            paragraphe et alors ? <br />
-            Selon Philippe Geluck, “Il n'y a que les imbéciles qui ne changent
-            pas d'avis”.
+            Ce portfolio a été conçu dans un cadre strictement personnel et destiné principalement à mon entourage ainsi qu'aux experts chargés d'évaluer objectivement le travail présenté.<br>
+            Il s'inscrit dans une démarche d'exploration liée au projet de recherche « TechnoWeb », mais également dans une optique professionnelle et de valorisation de compétences.
           </p>
 
           <nav>
@@ -94,11 +85,8 @@
       <section id="contact">
         <h2>Contactez-moi pour discuter de vos projets informatiques</h2>
         <p>
-          Si vous êtes intéressé par mon savoir-faire, par ma capacité à retenir
-          votre attention, ou même si vous avez eu un petit rictus amusé en
-          lisant mon projet, <br />
-          alors n'hésitez pas à me contacter afin que nous puissions discuter de
-          l'avenir et de nos futures collaborations, je l'espère.
+          Si mon travail, mes compétences ou ma manière de présenter ce projet ont retenu votre attention, je vous invite à me contacter.<br>
+          Ce sera l'occasion d'échanger sur vos besoins, vos projets et, je l'espère, sur de futures collaborations.
         </p>
 
         <form>
@@ -158,5 +146,6 @@
     </footer>
   </body>
 </html>
+
 
 
